--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-### VirtualEnv template
-# Virtualenv
-# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 .Python
 [Bb]in
 [Ii]nclude
@@ -146,6 +143,8 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+library_cache/*
+!library_cache/.gitkeep
 
 # Flask stuff:
 instance/
